# rendering

./: .gitignore  CMakeLists.txt  TestImage.cpp  TestRGBD.py  background.cpp  blend.cpp  flags.h  main.cpp  model.cpp  plyreader.cpp  point.cpp  test.cpp  videoRendering.cpp  videoRendering_template.flags
learnopengl/: camera.h  mesh.h  model.h  shader_m.h
ply/: PlyReader.cpp  PlyReader.h  plyUtils.h  tokenizer.h
shaders/: background.frag  background.vert  blend.frag  blend.vert  camera.frag  camera.vert  point.frag  point.vert  resolve.frag  resolve.vert  update.frag
utils/: Renderer.cpp  Renderer.h  loadCamPara.cpp  loadCamPara.h
